--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "adbfe1bd",
+   "id": "ddb4d355",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7f679449",
+   "id": "abac26d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "37311895",
+   "id": "f2a899f6",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7e3a8b2f",
+   "id": "8e79e0a1",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4edc3ff7",
+   "id": "a31986ec",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bad89958",
+   "id": "c25b0ca6",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f6b0f72c",
+   "id": "51191106",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ceb427b6",
+   "id": "7b213e42",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "80d6394d",
+   "id": "892c5e75",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "aa3e5a4f",
+   "id": "ae85eb85",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3a322e0e",
+   "id": "bb2cafcf",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8d4725a2",
+   "id": "498b5b27",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4061d857",
+   "id": "6b61b31f",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4631b02c",
+   "id": "576c8374",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c43cc7f0",
+   "id": "8e69f859",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d849d191",
+   "id": "6f5cc27e",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1d4cb52e",
+   "id": "eec4763a",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "744c59f6",
+   "id": "e6e8d121",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "2f8f24a9",
+   "id": "24e3b20d",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c30b2927",
+   "id": "8357787f",
    "metadata": {},
    "outputs": [
     {
@@ -413,10 +413,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7963db5c",
+   "execution_count": 52,
+   "id": "b256da94",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your name? kasia\n",
+      "What company do you work for? google\n",
+      "Hi, Sara!\n"
+     ]
+    }
+   ],
    "source": [
     "name = input('What is your name? ')\n",
     "company = input('What company do you work for? ')\n",
@@ -435,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3567f58f",
+   "id": "566ad6da",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -443,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ad4d828",
+   "id": "2b0e931a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -451,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "636c79ee",
+   "id": "150a912c",
    "metadata": {},
    "outputs": [],
    "source": []
