--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4a9a9100",
+   "id": "143b0f8c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ee6a9f4f",
+   "id": "2c055485",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b746e38b",
+   "id": "28dbd068",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f969666c",
+   "id": "83a2969b",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a045254d",
+   "id": "c4734241",
    "metadata": {},
    "outputs": [
     {
@@ -111,28 +111,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "b0c2cc77",
+   "execution_count": 38,
+   "id": "cadea1c3",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (2316370057.py, line 7)",
+     "evalue": "invalid syntax (4158364033.py, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[34], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    elif name == myname and comp=get_ipython().getoutput(' mycompany:')\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[38], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    elif name == ahmed and company=get_ipython().getoutput(' cisco:')\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "name= input ('Enter a name: ')\n",
-    "Company= input ('Enter a company name: ')\n",
-    "if name== ahmed and company== cisco :\n",
+    "name = input ('Enter a name: ')\n",
+    "Company = input ('Enter a company name: ')\n",
+    "if name == ahmed and company== cisco :\n",
     "    print('you are me')\n",
     "elif name == ahmed and company=! cisco:\n",
     "    print ('Hey there')\n",
-    "elif name=! ahmed and company== cisco:\n",
-    "    print (' Hello Colleague')\n",
+    "elif name =! ahmed and company== cisco:\n",
+    "    print ('Hello Colleague')\n",
     "else: \n",
     "    print ('Hello, who are you')"
    ]
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b43fd0b3",
+   "id": "1579cbd5",
    "metadata": {},
    "outputs": [],
    "source": []
