--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ddb4d355",
+   "id": "286b0707",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "abac26d2",
+   "id": "21b0fbec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f2a899f6",
+   "id": "f8c30252",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8e79e0a1",
+   "id": "dcc1d91f",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a31986ec",
+   "id": "cd2b99e3",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c25b0ca6",
+   "id": "358200ee",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "51191106",
+   "id": "e19ca644",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7b213e42",
+   "id": "0b4fbea5",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "892c5e75",
+   "id": "a2deaf5a",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ae85eb85",
+   "id": "72207c50",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bb2cafcf",
+   "id": "4018bb34",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "498b5b27",
+   "id": "cad0cbe1",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6b61b31f",
+   "id": "481fb76b",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "576c8374",
+   "id": "87aa7d49",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8e69f859",
+   "id": "43e5242e",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6f5cc27e",
+   "id": "21658c76",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "eec4763a",
+   "id": "54cbf00b",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e6e8d121",
+   "id": "b3718874",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "24e3b20d",
+   "id": "67e77692",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "8357787f",
+   "id": "b54088b9",
    "metadata": {},
    "outputs": [
     {
@@ -413,30 +413,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "b256da94",
+   "execution_count": 55,
+   "id": "a307598c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is your name? kasia\n",
-      "What company do you work for? google\n",
-      "Hi, Sara!\n"
+      "What is your name? anita\n",
+      "What company do you work for? cisco\n",
+      "That is me!\n"
      ]
     }
    ],
    "source": [
     "name = input('What is your name? ')\n",
     "company = input('What company do you work for? ')\n",
+    "\n",
     "if (name=='Sara'or name=='sara'\n",
-    "    and (company=='Cisco'or company=='cisco')):\n",
+    "    and company=='Cisco'or company=='cisco'):\n",
     "    print('That is me!')\n",
     "elif (name=='Sara'or name=='sara'\n",
     "    and company!='Cisco'or company!='cisco'):\n",
     "    print ('Hi, Sara!')\n",
-    "elif company=='Cisco'or company=='cisco': \n",
+    "elif company=='Cisco' or company=='cisco': \n",
     "    print('Hi, we are collegues!')\n",
     "else:\n",
     "    print('Oh, you?!')"
@@ -445,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "566ad6da",
+   "id": "7bf8b4c9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -453,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b0e931a",
+   "id": "4c2682e0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -461,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "150a912c",
+   "id": "cabf2022",
    "metadata": {},
    "outputs": [],
    "source": []
