--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -309,8 +309,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "3c60f482",
+   "execution_count": 48,
+   "id": "ea7dbbd4",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,8 @@
      "output_type": "stream",
      "text": [
       "Enter user name: Jaspreet\n",
-      "Enter company name: IBM\n"
+      "Enter company name: Cisco\n",
+      " Youre me!\n"
      ]
     },
     {
@@ -328,7 +329,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[47], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m name \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter user name: \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m company \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter company name: \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m \u001b[43mJaspreet\u001b[49m \u001b[38;5;129;01mand\u001b[39;00m company \u001b[38;5;241m==\u001b[39m Cisco:\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m You\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mre me!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m Jaspreet \u001b[38;5;129;01mand\u001b[39;00m Company \u001b[38;5;241m!=\u001b[39m Cisco:\n",
+      "Cell \u001b[0;32mIn[48], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJaspreet\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m company \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCisco\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m You\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mre me!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m \u001b[43mJaspreet\u001b[49m \u001b[38;5;129;01mand\u001b[39;00m Company \u001b[38;5;241m!=\u001b[39m Cisco:\n\u001b[1;32m      6\u001b[0m           \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThis Jaspreet is not from Cisco\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m!=\u001b[39m Jaspreet \u001b[38;5;129;01mand\u001b[39;00m Company \u001b[38;5;241m==\u001b[39m Cisco:\n",
       "\u001b[0;31mNameError\u001b[0m: name 'Jaspreet' is not defined"
      ]
     }
@@ -336,9 +337,9 @@
    "source": [
     "name = input('Enter user name: ')\n",
     "company = input('Enter company name: ')\n",
-    "if name == Jaspreet and company == Cisco:\n",
+    "if name == 'Jaspreet' and company == 'Cisco':\n",
     "    print(f' You''re me!')\n",
-    "if name == Jaspreet and Company != Cisco:\n",
+    "if name == 'Jaspreet' and Company != 'Cisco':\n",
     "          print('This Jaspreet is not from Cisco')\n",
     "if name != Jaspreet and Company == Cisco:\n",
     "          print('Greetings {name}!')\n",
@@ -350,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "193e611e",
+   "id": "0fc044bc",
    "metadata": {},
    "outputs": [],
    "source": []
