--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "143b0f8c",
+   "id": "fe0f2ab4",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2c055485",
+   "id": "f4b5f93a",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "28dbd068",
+   "id": "763779a8",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "83a2969b",
+   "id": "0b8c78d0",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c4734241",
+   "id": "01c36a4c",
    "metadata": {},
    "outputs": [
     {
@@ -111,16 +111,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "cadea1c3",
+   "execution_count": 40,
+   "id": "dbd0a633",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (4158364033.py, line 5)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a name: ahmed\n",
+      "Enter a company name: cisco\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'ahmed' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[38], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    elif name == ahmed and company=get_ipython().getoutput(' cisco:')\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[40], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m name \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter a name: \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m Company \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter a company name: \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m \u001b[43mahmed\u001b[49m \u001b[38;5;129;01mand\u001b[39;00m company\u001b[38;5;241m==\u001b[39m cisco :\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124myou are me\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m ahmed \u001b[38;5;129;01mand\u001b[39;00m company\u001b[38;5;241m!=\u001b[39m cisco:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ahmed' is not defined"
      ]
     }
    ],
@@ -129,9 +140,9 @@
     "Company = input ('Enter a company name: ')\n",
     "if name == ahmed and company== cisco :\n",
     "    print('you are me')\n",
-    "elif name == ahmed and company=! cisco:\n",
+    "elif name == ahmed and company!= cisco:\n",
     "    print ('Hey there')\n",
-    "elif name =! ahmed and company== cisco:\n",
+    "elif name != ahmed and company== cisco:\n",
     "    print ('Hello Colleague')\n",
     "else: \n",
     "    print ('Hello, who are you')"
@@ -140,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1579cbd5",
+   "id": "748d1c5c",
    "metadata": {},
    "outputs": [],
    "source": []
