--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d0141b00",
+   "id": "ad3b3185",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7bc1970f",
+   "id": "79b7cb24",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be31770f",
+   "id": "1f407907",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2316df0a",
+   "id": "29c69bb5",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2eb5e6a7",
+   "id": "73116e4f",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "933ab7ad",
+   "id": "ac2fe221",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "06690b33",
+   "id": "78566b6f",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "031909cd",
+   "id": "1ce5908c",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8f9f81d4",
+   "id": "998dc60a",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "86d7e89f",
+   "id": "dbbd07d1",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "6b2d72db",
+   "id": "123e6cf8",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5504f92f",
+   "id": "46ed6aee",
    "metadata": {},
    "outputs": [
     {
@@ -247,17 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "3cad6314",
+   "execution_count": 45,
+   "id": "f37ae97d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter your nameasd\n",
-      "Enter your comany namedas\n",
-      "Hi\n"
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (3322997576.py, line 12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[45], line 12\u001b[0;36m\u001b[0m\n\u001b[0;31m    else\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
      ]
     }
    ],
@@ -271,16 +270,16 @@
     "    print('You\\'re me!')\n",
     "elif name==myn:\n",
     "    print('What a nice name!')\n",
-    "elif name!=myn and com==myc:\n",
+    "elif com==myc:\n",
     "    print(f'Hello {name}!')\n",
-    "elif name!=myn and com!=myc:\n",
+    "else\n",
     "    print('Hi')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04ba5aa6",
+   "id": "ef5be6fe",
    "metadata": {},
    "outputs": [],
    "source": []
