--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "286b0707",
+   "id": "0399860b",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "21b0fbec",
+   "id": "4c0845da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f8c30252",
+   "id": "97792cb7",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dcc1d91f",
+   "id": "d258c72d",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cd2b99e3",
+   "id": "63aa6377",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "358200ee",
+   "id": "b67ba57e",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e19ca644",
+   "id": "035be3eb",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0b4fbea5",
+   "id": "230996e8",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a2deaf5a",
+   "id": "dc54eb79",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "72207c50",
+   "id": "6547bf67",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4018bb34",
+   "id": "a8fa1185",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cad0cbe1",
+   "id": "47ab0d6e",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "481fb76b",
+   "id": "e07a5a82",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "87aa7d49",
+   "id": "08cdf1c1",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "43e5242e",
+   "id": "11abd62a",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "21658c76",
+   "id": "8e89ab70",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "54cbf00b",
+   "id": "fd90d3ad",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b3718874",
+   "id": "589f7515",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "67e77692",
+   "id": "1d9d5f4f",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b54088b9",
+   "id": "a1bfd576",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "a307598c",
+   "id": "ceb998e1",
    "metadata": {},
    "outputs": [
     {
@@ -445,8 +445,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "id": "cdde6e5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your name? anita\n",
+      "What company do you work for? cisco\n",
+      "That is me!\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('What is your name? ')\n",
+    "company = input('What company do you work for? ')\n",
+    "\n",
+    "if (name=='Sara'or name=='sara'\n",
+    "    and company=='Cisco'or company=='cisco'):\n",
+    "    print('That is me!')\n",
+    "elif (name=='Sara'or name=='sara'):\n",
+    "    print ('Hi, Sara!')\n",
+    "elif company=='Cisco' or company=='cisco': \n",
+    "    print('Hi, we are collegues!')\n",
+    "else:\n",
+    "    print('Oh, you?!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7bf8b4c9",
+   "id": "981123fa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -454,15 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c2682e0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cabf2022",
+   "id": "31b9be2e",
    "metadata": {},
    "outputs": [],
    "source": []
