--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fe0f2ab4",
+   "id": "dfe5c5c9",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f4b5f93a",
+   "id": "c794b81b",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "763779a8",
+   "id": "809c6a7c",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0b8c78d0",
+   "id": "4cf1b0a2",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "01c36a4c",
+   "id": "6b9591b6",
    "metadata": {},
    "outputs": [
     {
@@ -111,8 +111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "dbd0a633",
+   "execution_count": 42,
+   "id": "c1133aa7",
    "metadata": {},
    "outputs": [
     {
@@ -120,29 +120,19 @@
      "output_type": "stream",
      "text": [
       "Enter a name: ahmed\n",
-      "Enter a company name: cisco\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'ahmed' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[40], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m name \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter a name: \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m Company \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter a company name: \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m \u001b[43mahmed\u001b[49m \u001b[38;5;129;01mand\u001b[39;00m company\u001b[38;5;241m==\u001b[39m cisco :\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124myou are me\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m ahmed \u001b[38;5;129;01mand\u001b[39;00m company\u001b[38;5;241m!=\u001b[39m cisco:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ahmed' is not defined"
+      "Enter a company name: cisco\n",
+      "you are me\n"
      ]
     }
    ],
    "source": [
     "name = input ('Enter a name: ')\n",
-    "Company = input ('Enter a company name: ')\n",
-    "if name == ahmed and company== cisco :\n",
+    "company = input ('Enter a company name: ')\n",
+    "if name == 'ahmed' and company== 'cisco' :\n",
     "    print('you are me')\n",
-    "elif name == ahmed and company!= cisco:\n",
+    "elif name == 'ahmed' and company!= 'cisco':\n",
     "    print ('Hey there')\n",
-    "elif name != ahmed and company== cisco:\n",
+    "elif name != 'ahmed' and company== 'cisco':\n",
     "    print ('Hello Colleague')\n",
     "else: \n",
     "    print ('Hello, who are you')"
@@ -151,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "748d1c5c",
+   "id": "6451d879",
    "metadata": {},
    "outputs": [],
    "source": []
