--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "62a90e07",
    "metadata": {},
    "outputs": [
@@ -117,9 +117,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name: Dima\n",
-      "Enter your company: HP\n",
-      "Hello Dima from HP, you have butiful name!\n"
+      "Enter your name: Bob\n",
+      "Enter your company: cisco\n",
+      "Hello Bob, we are colleagues!\n"
      ]
     }
    ],
@@ -129,9 +129,9 @@
     "company = input('Enter your company: ')\n",
     "if name == 'Dima' and company == 'cisco':\n",
     "    print('You are me, I am you!')\n",
-    "elif name == 'Dima' and company != 'cisco':\n",
+    "elif name == 'Dima':\n",
     "    print(f'Hello {name} from {company}, you have beautiful name!')\n",
-    "elif name != 'Dima' and company == 'cisco':\n",
+    "elif company == 'cisco':\n",
     "    print(f'Hello {name}, we are colleagues!')\n",
     "else:\n",
     "    print(f'Helo {name} from {company}, nice to meet you!')"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "574a3cfd",
+   "id": "e6f610c3",
    "metadata": {},
    "outputs": [],
    "source": []
