--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ad3b3185",
+   "id": "c4bd38e3",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "79b7cb24",
+   "id": "e5d0bdf5",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f407907",
+   "id": "28ac1dfc",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29c69bb5",
+   "id": "095a8227",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "73116e4f",
+   "id": "cc5be980",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ac2fe221",
+   "id": "61c527ab",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "78566b6f",
+   "id": "2c15cb67",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1ce5908c",
+   "id": "919925e0",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "998dc60a",
+   "id": "73a28ffc",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "dbbd07d1",
+   "id": "8909c641",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "123e6cf8",
+   "id": "94c7369e",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "46ed6aee",
+   "id": "7801a34a",
    "metadata": {},
    "outputs": [
     {
@@ -247,16 +247,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "f37ae97d",
+   "execution_count": 47,
+   "id": "785f8bbe",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "expected ':' (3322997576.py, line 12)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[45], line 12\u001b[0;36m\u001b[0m\n\u001b[0;31m    else\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your nameawda\n",
+      "Enter your comany nameawd\n",
+      "Hi\n"
      ]
     }
    ],
@@ -272,14 +273,14 @@
     "    print('What a nice name!')\n",
     "elif com==myc:\n",
     "    print(f'Hello {name}!')\n",
-    "else\n",
+    "else:\n",
     "    print('Hi')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef5be6fe",
+   "id": "2f9cf658",
    "metadata": {},
    "outputs": [],
    "source": []
